--- a/course-clipper/client/src/Pages/Components/Home/Home.css
+++ b/course-clipper/client/src/Pages/Components/Home/Home.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #F5F7FE;
+  background-color: #f5f7fe;
 }
 
 .dialog-box {
@@ -22,9 +22,10 @@ body {
   position: sticky;
   top: 0;
   z-index: 1000;
-  background-color: #F5F7FE;
+  background-color: #f5f7fe;
   padding: 0rem 1rem 0rem 5rem;
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px,
+    rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
 }
 
 .logo-section {
@@ -32,7 +33,7 @@ body {
   font-weight: bold;
 }
 
-.home-top-bar-section.button-section> #navbar-rev {
+.home-top-bar-section.button-section > #navbar-rev {
   width: 105px;
   border: 3px solid gray;
   color: gray;
@@ -121,15 +122,90 @@ body {
   filter: blur(3px);
 }
 
-
-
 #navbar-search-box {
-  width:25rem;
-  margin-right:14px; 
-  height:2.7em; 
-  border-radius:24px; 
-  border:1px solid gray;
+  width: 25rem;
+  margin-right: 14px;
+  height: 2.7em;
+  border-radius: 24px;
+  border: 1px solid gray;
 }
-#navbar-search-box:focus{
+#navbar-search-box:focus {
   border-color: gray;
+}
+
+.login-dialog {
+}
+
+.main-lgn {
+  display: flex;
+  flex-direction: column;
+  padding: 5px;
+  align-items: center;
+}
+.login-text {
+  font-size: 2rem;
+  color: black;
+  font-weight: bold;
+  height: 30px;
+  height: 60px;
+}
+
+.input-1-box {
+  display: flex;
+  flex-direction: column;
+  margin: 8px 0px 8px 0px;
+}
+.input-1-box input {
+  height: 35px;
+  width: 270px;
+  border: 1px solid rgb(178, 176, 176);
+  border-radius: 5px;
+  padding-left: 10px;
+  outline: none;
+  transition: 0.5s;
+
+}
+
+.input-2-box input {
+  height: 35px;
+  width: 270px;
+  border: 1px solid rgb(178, 176, 176);
+  border-radius: 5px;
+  padding-left: 10px;
+  outline: none;
+  transition: 0.5s;
+}
+input:focus {
+  border: 2px solid  #0bb980;;
+}
+.input-2-box label {
+  color: rgb(178, 176, 176);
+}
+.input-1-box label {
+  color: rgb(178, 176, 176);
+}
+
+.input-2-box {
+  display: flex;
+  flex-direction: column;
+  margin: 8px 0px 8px 0px;
+}
+
+.lgn-btn {
+  width: 200px;
+  background: rgb(32, 55, 226);
+  background: linear-gradient(
+    344deg,
+    rgba(32, 55, 226, 1) 0%,
+    rgba(11, 185, 128, 1) 72%
+  );
+  border-radius: 5px;
+  height: 30px;
+  margin-top: 20px;
+  text-align: center;
+}
+
+.lgn-btn Button {
+  color: white;
+  width: 200px;
 }
